fix mouse button/chevron position on mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -1186,7 +1186,7 @@
 		right: 50%;
 		margin-left: 0;
 		margin-right: -10px;
-		bottom: 150px;
+		bottom: 5%;
 	}
 
 
